--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,26 @@
 asgiref==3.8.1
+boto3==1.35.12
+botocore==1.35.12
+certifi==2024.8.30
+charset-normalizer==3.3.2
 crispy-bootstrap5==2024.2
+dj-database-url==2.2.0
 Django==4.2
 django-crispy-forms==2.1
+django-dotenv==1.4.2
 django-environ==0.11.2
+django-storages==1.14.4
+djangorestframework==3.15.2
+gunicorn==23.0.0
+idna==3.8
+jmespath==1.0.1
+packaging==24.1
 pillow==10.3.0
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+requests==2.32.3
+s3transfer==0.10.2
+six==1.16.0
 sqlparse==0.5.0
 typing_extensions==4.12.2
-dj-database-url
-djangorestframework
-django-storages
-django-storages[s3]
-gunicorn
+urllib3==2.2.2
